# cppcraft

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  CMakeSettings.json  README.md  build-run.bat
asset/gimp/: blocks.xcf  cube.xcf
data/: loonride.txt  test2.txt  world1.txt
game/Release/1.0/asset/gimp/: blocks.xcf  crosshair.xcf  lower_inventory.xcf  lower_inventory_selector.xcf
game/Release/1.0/data/: test.json  world1.txt
game/Release/1.0/shaders/: fragment1.glsl
shaders/: BlockFragment.glsl  BlockVertex.glsl  ProjectedVertex.glsl  ShaderProgram.cpp  ShaderProgram.h  StaticVertex.glsl  fragment1.glsl  vertex1.glsl
src/: Camera.cpp  Camera.h  Controller.cpp  Controller.h  Game.cpp  Game.h  GameInstance.cpp  GameInstance.h  Inventory.cpp  Inventory.h  PlayerController.cpp  PlayerController.h  config.h  main.cpp  util.cpp  util.h
src/Render/: BlockRenderer.cpp  BlockRenderer.h  EntityBlockRenderer.cpp  EntityBlockRenderer.h  IRenderer.cpp  IRenderer.h  InventoryRenderer.cpp  InventoryRenderer.h
src/Shaders/: BlockShader.cpp  BlockShader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  StaticShader.cpp  StaticShader.h
src/Texture/: TextureManager.cpp  TextureManager.h
src/World/: BlockUtil.h  Chunk.cpp  Chunk.h  ChunkController.cpp  ChunkController.h  World.cpp  World.h
